# Brilliant

./: .gitignore  README.md  _n_root.dot  _pow.dot  bench.toml  bril.opam  commands.txt  dune-project  gcd_dom.dot  matmul.json  n_root.bril  n_root.dot  n_root.json  opt_n_root.json  orders_cfg.dot  perfect.sh  results.csv  test.sh  tmp.dot  tmp_cfg.dot  tmp_dom.dot
lib/: dune  ir.ml  parse.ml  parse.mli
lib/cfg/: cflow.ml  cflow.mli  dominance.ml  dominance.mli  dune  graph.ml  graph.mli  ssa.ml  ssa.mli  util.ml
lib/cli/: cli.ml  dune
lib/dataflow/: dune  factory.ml  impl.ml  worklist.ml  worklist.mli
lib/df/: #dataflow.ml#  cfg.ml  cfg.mli  dataflow.ml  dataflow.mli  dominance.ml  dune  factory.ml  graph.ml  graph.mli  impl.ml  sig.mli
lib/global/: dominance.ml  dune  licm.ml  ssa.ml  ssa.mli
lib/ir/: bril.ml  bril.mli  bril_type.ml  bril_type.mli  cflow.ml  common.ml  const.ml  const.mli  dune  func.ml  func.mli  instr.ml  instr.mli  op.ml  op.mli
lib/local/: dune  lvn.ml
lib/lvn/: dune  lvn.ml  lvn.mli
lib/optimize/: cfg.ml  cfg.mli  dune  lvn.ml
lib/util/: common.ml  dune  graph.ml  sig.mli
test/: #is_ssa.py#  cfg_test.ml  domTest.ml  dune  is_ssa.sh  n_root.dot  n_root_opt.json  test.ml
test/benchmarks/: Brils2Jsons.sh  README.md  cholesky.json  max-subarray.json  sieve.json
