opam-version: "2.0"
version: "1.2.0"
homepage: "https://github.com/sampsyo/bril/tree/master/bril-ocaml"
bug-reports: "https://github.com/sampsyo/bril/tree/master/bril-ocaml"
authors: "Andrey Yao"
maintainer: "Andrey Yao"
synopsis: "Bril OCaml"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ocaml"
  "yojson"
  "dune" {>= "2.9"}
]
